# KoreAdmin

./: .ruff.toml  README.md  pyproject.toml  run.py
server/: __init__.py  alembic.ini
server/alembic/: env.py
server/core/config/: __init__.py  cas_rbac_model.conf
server/core/msd/: crub_base.py  service_base.py  tools_base.py
server/core/register/: __init__.py  cors.py  docs.py  exception_handlers.py  init_db.py  middleware.py  mount.py
server/core/response_base/: __init__.py  response_schema.py
server/core/security/: depends_auth.py  jwt_utils.py  passwd_encrypt.py
server/core/utils/: timezone.py  validators.py
server/db/: __init__.py  db_casbin.py  db_datebase.py  models.py
server/routers/: __init__.py
server/routers/system/: __init__.py
server/routers/system/crud/: __init__.py  casbin_crud.py  dept_crud.py  menu_crud.py  role_crud.py  user_crud.py
server/routers/system/models/: __init__.py  sys_casbin_rule.py  sys_dept.py  sys_menu.py  sys_role.py  sys_role_menu.py  sys_user.py  sys_user_dept.py  sys_user_role.py
server/routers/system/schemas/: __init__.py  auth_schema.py  dept_schema.py  menu_schema.py  role_schema.py  (+1 more)
server/routers/z_scm/: __init__.py
server/routers/z_wjw_test/: __init__.py
server/templates/common/: app.html.jinja2  page.html.jinja2
server/templates/tests/: index.json.jinja2  test-page.json.jinja2  test.json.jinja2
server/tests/: conftest.py
server/tests/utils/: fixture_casbin.py  fixture_db.py  fixture_setup.py  fixture_token.py
server/tests/v1/: test_auth.py  test_dept.py  test_system.py  test_user.py
(+25 files in other folders)
